[package]
name = "muta-hackathon"
version = "0.2.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", rev = "1cd7cb6"}
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "1cd7cb6", package = "muta-protocol" }

derive_more = "0.15"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util"]}
clap = "2.33"

metadata = { path = "services/metadata" }
asset = { path = "services/asset" }
node_manager = { path = "services/node_manager" }
crosschain = { path = "services/crosschain" }

[workspace]
members = [
  "services/metadata",
  "services/asset",
  "services/crosschain",
  "services/node_manager"
]
